# tinkapp.v4

./: .gitignore  cache_kbl.json  coin_walk.ipynb  coin_walk_analysis.ipynb  coin_walk_db_gn.parquet  coin_walk_db_kbl.parquet  coin_walk_gn.xlsx  coin_walk_gn_WORK_IN_PROGRESS.xlsx  coin_walk_v2.ipynb  dfrows_tnk.parquet  explore_bolillas_v2 GN.ipynb  explore_bolillas_v2 KBL.ipynb  explore_bolillas_v2.ipynb  explore_bolillas_v3_GN.ipynb  explore_bolillas_v3_KBL.ipynb  explore_bolillas_v3_TNK.ipynb  explore_bolillas_v4_TNK.ipynb  explore_parquet_v2.ipynb  explore_parquet_v2_GN.ipynb  explore_posibilities_v2.ipynb  explore_posibilities_v2_GN.ipynb  explore_relationships.pbix  gn_cahe_v3.json  gn_cluster10.xlsx  gn_tnk_v3.json  gnche.json  jumps_map.json  jumps_map_gn.json  jumps_map_kbl.json  kbl_cache.json  kbl_cache_v3.json  parquet_gn_v3.parquet  pip_install.txt  pyproject.toml  saved_bolillas_gn.parquet  test.py  tinkache.json  unijump.xlsx  unijump_gn.json  unijump_gn.xlsx  (+3 more)
shared/: random_rules.py  utils.py
