[project]
name = "tinkapp-v4"
version = "0.1.0"
description = ""
authors = [
    {name = "Marlon",email = "marlon.colca.io@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "polars (>=1.21.0,<2.0.0)",
    "altair[all] (>=5.5.0,<6.0.0)"
]

[tool.poetry]
packages = [{include = "tinkapp"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
